# qlog

./: CONFIG_OPTIONS.csv  README.md  convert.py  flake.nix  pyproject.toml
src/qlog/: __main__.py  cli.py  config.py  entry.py  github.py  helpers.py  qlog.py  util.py
